--- a/translations/kangyur/placeholders/095-003_toh748,948-the_incantation_of_blueclad_vajrapani.xml
+++ b/translations/kangyur/placeholders/095-003_toh748,948-the_incantation_of_blueclad_vajrapani.xml
@@ -15,7 +15,7 @@
                 <author role="translatorEng" xml:id="UT22084-095-003-6">Bruno Galasek-Hul</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -37,7 +37,7 @@
                     <ref>Toh 948</ref>
                     <biblScope>vol.101, ff.pp.41v-42v(82-84)</biblScope>
                     <location work="UT4CZ5369" count-pages="3">
-                        <volume number="101" start-page="82" end-page="84"/>
+                        <volume number="102" start-page="82" end-page="84"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12711" work="W22084"/>
@@ -65,6 +65,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-03-27T15:18:22.585Z" type="text-version" status="0.0.6" xml:id="UT22084-095-003-9">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T09:18:04.215Z" type="text-version" status="0.0.7" xml:id="UT22084-095-003-10">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
