--- a/translations/kangyur/placeholders/095-004_toh749,950-the_eight_names_of_vajrapani_along_with_the_mantra.xml
+++ b/translations/kangyur/placeholders/095-004_toh749,950-the_eight_names_of_vajrapani_along_with_the_mantra.xml
@@ -12,7 +12,7 @@
                 <author role="translatorEng" xml:id="UT22084-095-004-5">Adam C. Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -33,7 +33,7 @@
                     <ref>Toh 950</ref>
                     <biblScope>vol.101, ff.43v-45r(pp.86-89)</biblScope>
                     <location work="UT4CZ5369" count-pages="4">
-                        <volume number="101" start-page="86" end-page="89"/>
+                        <volume number="102" start-page="86" end-page="89"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12713" work="W22084"/>
@@ -53,6 +53,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-08T10:51:18.681Z" type="text-version" status="0.0.2" xml:id="UT22084-095-004-6">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T09:21:28.721Z" type="text-version" status="0.0.3" xml:id="UT22084-095-004-7">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
