--- a/translations/kangyur/placeholders/096-003_toh754,951-the_essence_of_the_ten_vajrapanis.xml
+++ b/translations/kangyur/placeholders/096-003_toh754,951-the_essence_of_the_ten_vajrapanis.xml
@@ -13,7 +13,7 @@
                 <author role="translatorEng" xml:id="UT22084-096-003-5">Adam C. Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -34,7 +34,7 @@
                     <ref>Toh 951</ref>
                     <biblScope>vol.101, ff.45r-45v(pp.89-90)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="101" start-page="89" end-page="90"/>
+                        <volume number="102" start-page="89" end-page="90"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12714" work="W22084"/>
@@ -54,6 +54,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-08T10:52:24.513Z" type="text-version" status="0.0.2" xml:id="UT22084-096-003-6">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T09:24:01.089Z" type="text-version" status="0.0.3" xml:id="UT22084-096-003-7">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
