--- a/translations/kangyur/placeholders/096-001_toh752,954-the_incantation_of_vajrajita_who_is_bewildering_like_fire.xml
+++ b/translations/kangyur/placeholders/096-001_toh752,954-the_incantation_of_vajrajita_who_is_bewildering_like_fire.xml
@@ -13,6 +13,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rdo rje mi pham pa me ltar rab tu rmongs byed ces bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryavajrājitānalapramohanī­nāmadhāraṇī</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
                 <availability status=""/>
                 <idno xml:id="UT22084-096-001"/>
@@ -31,7 +35,7 @@
                     <ref>Toh 954</ref>
                     <biblScope>vol.101, ff.46v-49v(pp.92-98)</biblScope>
                     <location work="UT4CZ5369" count-pages="7">
-                        <volume number="101" start-page="92" end-page="98"/>
+                        <volume number="102" start-page="92" end-page="98"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12717" work="W22084"/>
@@ -42,6 +46,9 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-001-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T09:31:04.22Z" type="text-version" status="0.0.2" xml:id="UT22084-096-001-2">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
