--- a/translations/kangyur/placeholders/096-004_toh755,957-the_incantation_the_fourfold_essence_of_kundalyamrta.xml
+++ b/translations/kangyur/placeholders/096-004_toh755,957-the_incantation_the_fourfold_essence_of_kundalyamrta.xml
@@ -12,6 +12,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bdud rtsi thab sbyor gyi snying po bzhi pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryakuṇḍalyamṛta­hṛdayacatuṣṭayanāma­dhāraṇī</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
                 <availability status=""/>
                 <idno xml:id="UT22084-096-004"/>
@@ -30,7 +34,7 @@
                     <ref>Toh 957</ref>
                     <biblScope>vol.101, ff.51v-53r(pp.102-105)</biblScope>
                     <location work="UT4CZ5369" count-pages="4">
-                        <volume number="101" start-page="102" end-page="105"/>
+                        <volume number="102" start-page="102" end-page="105"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12720" work="W22084"/>
@@ -41,6 +45,9 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-004-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T09:36:41.871Z" type="text-version" status="0.0.2" xml:id="UT22084-096-004-2">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
