--- a/translations/kangyur/placeholders/091-003_toh606,958-the_incantation_of_mahadanda.xml
+++ b/translations/kangyur/placeholders/091-003_toh606,958-the_incantation_of_mahadanda.xml
@@ -15,7 +15,7 @@
                 <author role="translatorEng" xml:id="UT22084-091-003-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -37,7 +37,7 @@
                     <ref>Toh 958</ref>
                     <biblScope>vol.101, ff.53r-55v(pp.105-110)</biblScope>
                     <location work="UT4CZ5369" count-pages="6">
-                        <volume number="101" start-page="105" end-page="110"/>
+                        <volume number="102" start-page="105" end-page="110"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12721" work="W22084"/>
@@ -65,6 +65,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-091-003-11">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T09:40:16.826Z" type="text-version" status="0.0.6" xml:id="UT22084-091-003-12">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
