--- a/translations/kangyur/placeholders/091-052_toh655,959-the_incantation_which_removes_hindrances.xml
+++ b/translations/kangyur/placeholders/091-052_toh655,959-the_incantation_which_removes_hindrances.xml
@@ -4,16 +4,17 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">bgegs sel ba'i gzungs/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">Vighnavināyakadhāraṇī</title>
                 <title type="mainTitle" xml:lang="en">The Dhāraṇī which Removes Hindrances</title>
-                <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bgegs sel ba'i gzungs/</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Vighnavināyakadhāraṇī</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">bgegs sel ba'i gzungs/</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryavighnavināyakanāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryavighnavināyakānāmadhāraṇī</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bgegs sel ba'i gzungs/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">Āryavighnavināyakanāmadhāraṇī</title>
+                <author role="translatorMain" xml:id="UT22084-091-052-4">84000 Associate Translators</author>
+                <author role="translatorEng" xml:id="UT22084-091-052-5">Adam C. Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -34,7 +35,7 @@
                     <ref>Toh 959</ref>
                     <biblScope>vol.101, ff.55v-56r(pp.110-111)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="101" start-page="110" end-page="111"/>
+                        <volume number="102" start-page="110" end-page="111"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12722" work="W22084"/>
@@ -51,6 +52,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-05-16T07:24:47.315Z" type="text-version" status="0.0.1" xml:id="UT22084-091-052-3">
                     <desc>User set version to 0.0.1</desc>
+                </change>
+                <change who="#line-tofte" when="2024-05-16T07:25:25.06Z" type="text-version" status="0.0.2" xml:id="UT22084-091-052-6">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T09:40:47.216Z" type="text-version" status="0.0.3" xml:id="UT22084-091-052-7">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
