--- a/translations/kangyur/placeholders/094-014_toh737,960-the_incantation_of_pratyangira_the_powerful.xml
+++ b/translations/kangyur/placeholders/094-014_toh737,960-the_incantation_of_pratyangira_the_powerful.xml
@@ -15,7 +15,7 @@
                 <author role="translatorEng" xml:id="UT22084-094-014-5">Annie Heckman</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -36,7 +36,7 @@
                     <ref>Toh 960</ref>
                     <biblScope>vol.101, ff.56r-56v(pp.111-112)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="101" start-page="111" end-page="112"/>
+                        <volume number="102" start-page="111" end-page="112"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12723" work="W22084"/>
@@ -56,6 +56,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-08T11:07:00.013Z" type="text-version" status="0.0.2" xml:id="UT22084-094-014-6">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T09:44:10.548Z" type="text-version" status="0.0.3" xml:id="UT22084-094-014-7">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
