--- a/translations/kangyur/placeholders/091-026_toh629,961-the_incantation_for_triumphing_over_bandits.xml
+++ b/translations/kangyur/placeholders/091-026_toh629,961-the_incantation_for_triumphing_over_bandits.xml
@@ -13,7 +13,7 @@
                 <author role="translatorEng" xml:id="UT22084-091-026-5">Bruno Galasek-Hul</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2024</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -34,7 +34,7 @@
                     <ref>Toh 961</ref>
                     <biblScope>vol.101, ff.56v-57r(pp.112-113)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="101" start-page="112" end-page="113"/>
+                        <volume number="102" start-page="112" end-page="113"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12724" work="W22084"/>
@@ -60,6 +60,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-03-27T15:14:01.334Z" type="text-version" status="0.0.3" xml:id="UT22084-091-026-8">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T10:03:49.032Z" type="text-version" status="0.0.4" xml:id="UT22084-091-026-9">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
