--- a/translations/kangyur/placeholders/090-044_toh600,962-the_incantation_of_usnisajvala.xml
+++ b/translations/kangyur/placeholders/090-044_toh600,962-the_incantation_of_usnisajvala.xml
@@ -10,6 +10,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">gtsug tor 'bar ba zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">gtsug tor 'bar ba zhes bya ba'i gzungs/</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
                 <availability status=""/>
                 <idno xml:id="UT22084-090-044"/>
@@ -28,7 +32,7 @@
                     <ref>Toh 962</ref>
                     <biblScope>vol.101, ff.57r-57v(pp.113-114)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="101" start-page="113" end-page="114"/>
+                        <volume number="102" start-page="113" end-page="114"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12725" work="W22084"/>
@@ -39,6 +43,9 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-090-044-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T10:04:21.926Z" type="text-version" status="0.0.2" xml:id="UT22084-090-044-2">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
