--- a/translations/kangyur/placeholders/091-028_toh631,963-the_incantation_of_acala.xml
+++ b/translations/kangyur/placeholders/091-028_toh631,963-the_incantation_of_acala.xml
@@ -12,9 +12,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mi g.yo ba zhes bya ba'i gzungs/</title>
                 <author role="translatorMain" xml:id="UT22084-091-028-4">84000 Associate Translators</author>
                 <author role="translatorEng" xml:id="UT22084-091-028-5">Sophie McGrath</author>
+                <sponsor xml:id="UT22084-091-028-7">On behalf of all sentient beings-Ken, Mary, Alica and Sean Cheang</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -35,7 +36,7 @@
                     <ref>Toh 963</ref>
                     <biblScope>vol.101, ff.57v-58r(pp.114-115)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="101" start-page="114" end-page="115"/>
+                        <volume number="102" start-page="114" end-page="115"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12726" work="W22084"/>
@@ -55,6 +56,15 @@
                 </change>
                 <change who="#line-tofte" when="2023-12-07T11:14:50.635Z" type="text-version" status="0.0.2" xml:id="UT22084-091-028-6">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-05-29T17:26:24.683Z" type="text-version" status="0.0.3" xml:id="UT22084-091-028-8">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#cabie-sim" when="2024-06-18T09:37:39.18Z" type="text-version" status="0.0.4" xml:id="UT22084-091-028-9">
+                    <desc>Auto (update-sponsorship)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T10:05:01.244Z" type="text-version" status="0.0.5" xml:id="UT22084-091-028-10">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
