--- a/translations/kangyur/placeholders/096-008_toh759,964-the_vow_of_the_naga_vajratunda.xml
+++ b/translations/kangyur/placeholders/096-008_toh759,964-the_vow_of_the_naga_vajratunda.xml
@@ -16,7 +16,7 @@
                 <author role="translatorEng" xml:id="UT22084-096-008-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -38,7 +38,7 @@
                     <ref>Toh 964</ref>
                     <biblScope>vol.101, ff.58v-79v(pp.116-158)</biblScope>
                     <location work="UT4CZ5369" count-pages="43">
-                        <volume number="101" start-page="116" end-page="158"/>
+                        <volume number="102" start-page="116" end-page="158"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12727" work="W22084"/>
@@ -66,6 +66,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-096-008-11">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T10:05:31.769Z" type="text-version" status="0.0.6" xml:id="UT22084-096-008-12">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
