--- a/translations/kangyur/placeholders/096-009_toh760,965-the_incantation_of_vajralohatunda.xml
+++ b/translations/kangyur/placeholders/096-009_toh760,965-the_incantation_of_vajralohatunda.xml
@@ -12,6 +12,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">rdo rje gnam lcags mchu zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Vajralohatuṇḍanāmadhāraṇī</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
                 <availability status=""/>
                 <idno xml:id="UT22084-096-009"/>
@@ -30,7 +34,7 @@
                     <ref>Toh 965</ref>
                     <biblScope>vol.101, ff.80r-81v(pp.159-162)</biblScope>
                     <location work="UT4CZ5369" count-pages="4">
-                        <volume number="101" start-page="159" end-page="162"/>
+                        <volume number="102" start-page="159" end-page="162"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12728" work="W22084"/>
@@ -41,6 +45,9 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-009-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T10:06:03.118Z" type="text-version" status="0.0.2" xml:id="UT22084-096-009-2">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
