--- a/translations/kangyur/placeholders/096-012_toh763,966-black_lohatunda.xml
+++ b/translations/kangyur/placeholders/096-012_toh763,966-black_lohatunda.xml
@@ -12,6 +12,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lcags mchu nag po</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryakṛṣṇāyauṣṭha</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
                 <availability status=""/>
                 <idno xml:id="UT22084-096-012"/>
@@ -30,7 +34,7 @@
                     <ref>Toh 966</ref>
                     <biblScope>vol.101, ff.81v-83v(pp.162-166)</biblScope>
                     <location work="UT4CZ5369" count-pages="5">
-                        <volume number="101" start-page="162" end-page="166"/>
+                        <volume number="102" start-page="162" end-page="166"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12729" work="W22084"/>
@@ -41,6 +45,9 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-012-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T10:12:19.165Z" type="text-version" status="0.0.2" xml:id="UT22084-096-012-2">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
