--- a/translations/kangyur/placeholders/094-011_toh734,968-pratyangira_the_noble_conquerer.xml
+++ b/translations/kangyur/placeholders/094-011_toh734,968-pratyangira_the_noble_conquerer.xml
@@ -13,6 +13,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">phyir zlog pa 'phags pa rnam par rgyal ba can zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryavijayavatīnāmapratyaṅgirā</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
                 <availability status=""/>
                 <idno xml:id="UT22084-094-011"/>
@@ -31,7 +35,7 @@
                     <ref>Toh 968</ref>
                     <biblScope>vol.101, ff.84r-85v(pp.167-170)</biblScope>
                     <location work="UT4CZ5369" count-pages="4">
-                        <volume number="101" start-page="167" end-page="170"/>
+                        <volume number="102" start-page="167" end-page="170"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12731" work="W22084"/>
@@ -42,6 +46,9 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-094-011-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T10:13:50.726Z" type="text-version" status="0.0.2" xml:id="UT22084-094-011-2">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
