--- a/translations/kangyur/placeholders/096-022_toh773,969-mahasvasa_king_of_spells.xml
+++ b/translations/kangyur/placeholders/096-022_toh773,969-mahasvasa_king_of_spells.xml
@@ -10,6 +10,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rig sngags kyi rgyal po dbugs chen po zhes bya ba/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa rig sngags kyi rgyal po dbugs chen po zhes bya ba/</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
                 <availability status=""/>
                 <idno xml:id="UT22084-096-022"/>
@@ -28,7 +32,7 @@
                     <ref>Toh 969</ref>
                     <biblScope>vol.101, ff.85v-86r(pp.170-171)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="101" start-page="170" end-page="171"/>
+                        <volume number="102" start-page="170" end-page="171"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12732" work="W22084"/>
@@ -39,6 +43,9 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-022-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T10:14:29.422Z" type="text-version" status="0.0.2" xml:id="UT22084-096-022-2">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
