--- a/translations/kangyur/placeholders/096-018_toh769,971-the_beneficent_incantation_of_the_compassionate_jambhalajalendra.xml
+++ b/translations/kangyur/placeholders/096-018_toh769,971-the_beneficent_incantation_of_the_compassionate_jambhalajalendra.xml
@@ -19,7 +19,7 @@
                 <author role="translatorEng" xml:id="UT22084-096-018-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -41,7 +41,7 @@
                     <ref>Toh 971</ref>
                     <biblScope>vol.101, ff.87r-87r(pp.173-173)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="101" start-page="173" end-page="173"/>
+                        <volume number="102" start-page="173" end-page="173"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12734" work="W22084"/>
@@ -69,6 +69,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-096-018-11">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T10:19:02.881Z" type="text-version" status="0.0.6" xml:id="UT22084-096-018-12">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
