--- a/translations/kangyur/placeholders/096-020_toh771,972-the_hundred_and_eight_names_of_jambhala.xml
+++ b/translations/kangyur/placeholders/096-020_toh771,972-the_hundred_and_eight_names_of_jambhala.xml
@@ -14,7 +14,7 @@
                 <author role="translatorEng" xml:id="UT22084-096-020-5">Catherine Dalton</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -35,7 +35,7 @@
                     <ref>Toh 972</ref>
                     <biblScope>vol.101, ff.87r-89r(pp.173-177)</biblScope>
                     <location work="UT4CZ5369" count-pages="5">
-                        <volume number="101" start-page="173" end-page="177"/>
+                        <volume number="102" start-page="173" end-page="177"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12735" work="W22084"/>
@@ -58,6 +58,9 @@
                 </change>
                 <change who="#admin" when="2023-12-07T15:05:20.361Z" type="text-version" status="0.0.1" xml:id="UT22084-096-020-7">
                     <desc>script-increment-version-published</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T10:19:45.293Z" type="text-version" status="0.0.2" xml:id="UT22084-096-020-8">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
