--- a/translations/kangyur/placeholders/096-017_toh768,973-the_incantation_of_jambhalasri.xml
+++ b/translations/kangyur/placeholders/096-017_toh768,973-the_incantation_of_jambhalasri.xml
@@ -12,6 +12,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa gnod 'dzin dpal zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryajambhalaśrīnāmadhāraṇī</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
                 <availability status=""/>
                 <idno xml:id="UT22084-096-017"/>
@@ -30,7 +34,7 @@
                     <ref>Toh 973</ref>
                     <biblScope>vol.101, ff.89r-90r(pp.177-179)</biblScope>
                     <location work="UT4CZ5369" count-pages="3">
-                        <volume number="101" start-page="177" end-page="179"/>
+                        <volume number="102" start-page="177" end-page="179"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12736" work="W22084"/>
@@ -41,6 +45,9 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-096-017-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T10:22:38.297Z" type="text-version" status="0.0.2" xml:id="UT22084-096-017-2">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
