--- a/translations/kangyur/placeholders/091-051_toh654,975-the_incantation_of_the_ocean_of_dharma.xml
+++ b/translations/kangyur/placeholders/091-051_toh654,975-the_incantation_of_the_ocean_of_dharma.xml
@@ -13,7 +13,7 @@
                 <author role="translatorEng" xml:id="UT22084-091-051-7">Patrick Lambelet</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -35,7 +35,7 @@
                     <ref>Toh 975</ref>
                     <biblScope>vol.101, ff.92r-95r(pp.183-189)</biblScope>
                     <location work="UT4CZ5369" count-pages="7">
-                        <volume number="101" start-page="183" end-page="189"/>
+                        <volume number="102" start-page="183" end-page="189"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12738" work="W22084"/>
@@ -60,6 +60,9 @@
                 </change>
                 <change who="#line-tofte" when="2023-08-09T10:20:06.867Z" type="text-version" status="0.0.4" xml:id="UT22084-091-051-8">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T10:23:40.907Z" type="text-version" status="0.0.5" xml:id="UT22084-091-051-9">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
