--- a/translations/kangyur/placeholders/093-024_toh709,978-the_great_awareness_of_aparajita.xml
+++ b/translations/kangyur/placeholders/093-024_toh709,978-the_great_awareness_of_aparajita.xml
@@ -12,7 +12,7 @@
                 <author role="translatorEng" xml:id="UT22084-093-024-5">Annie Heckman</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -33,7 +33,7 @@
                     <ref>Toh 978</ref>
                     <biblScope>vol.101, ff.96r-96v(pp.191-192)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="101" start-page="191" end-page="192"/>
+                        <volume number="102" start-page="191" end-page="192"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12741" work="W22084"/>
@@ -53,6 +53,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-02-08T11:05:48.846Z" type="text-version" status="0.0.2" xml:id="UT22084-093-024-6">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T10:32:23.746Z" type="text-version" status="0.0.3" xml:id="UT22084-093-024-7">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
