--- a/translations/kangyur/placeholders/091-012_toh615,976-the_incantation_reliance_upon_many_sons.xml
+++ b/translations/kangyur/placeholders/091-012_toh615,976-the_incantation_reliance_upon_many_sons.xml
@@ -12,6 +12,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bu mang po rton pa zhes bya ba'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryabahuputra­pratisaraṇa­nāmadhāraṇī</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
                 <availability status=""/>
                 <idno xml:id="UT22084-091-012"/>
@@ -29,8 +33,8 @@
                 <bibl key="toh976" type="text">
                     <ref>Toh 976</ref>
                     <biblScope>vol.101, ff.95r-96r(pp.189-190)</biblScope>
-                    <location work="UT4CZ5369" count-pages="2">
-                        <volume number="101" start-page="189" end-page="190"/>
+                    <location work="UT4CZ5369" count-pages="3">
+                        <volume number="102" start-page="189" end-page="191"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12739" work="W22084"/>
@@ -41,6 +45,9 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-091-012-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T10:32:58.065Z" type="text-version" status="0.0.2" xml:id="UT22084-091-012-2">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
