--- a/translations/kangyur/placeholders/090-043_toh599,983-the_incantation_of_vimalosnisa.xml
+++ b/translations/kangyur/placeholders/090-043_toh599,983-the_incantation_of_vimalosnisa.xml
@@ -19,7 +19,7 @@
                 <author role="translatorEng" xml:id="UT22084-090-043-2">Catherine Dalton</author>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -42,7 +42,7 @@
                     <ref>Toh 983</ref>
                     <biblScope>vol.101, ff.110v-119v(pp.220-238)</biblScope>
                     <location work="UT4CZ5369" count-pages="19">
-                        <volume number="101" start-page="220" end-page="238"/>
+                        <volume number="102" start-page="220" end-page="238"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12746" work="W22084"/>
@@ -70,6 +70,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-090-043-9">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T10:39:10.832Z" type="text-version" status="0.0.6" xml:id="UT22084-090-043-10">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
