--- a/translations/kangyur/placeholders/090-015_toh571,990-the_spell_of_janguli.xml
+++ b/translations/kangyur/placeholders/090-015_toh571,990-the_spell_of_janguli.xml
@@ -14,7 +14,7 @@
                 <author role="translatorEng" xml:id="UT22084-090-015-2">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -36,7 +36,7 @@
                     <ref>Toh 990</ref>
                     <biblScope>vol.101, ff.143v-144v(pp.286-288)</biblScope>
                     <location work="UT4CZ5369" count-pages="3">
-                        <volume number="101" start-page="286" end-page="288"/>
+                        <volume number="102" start-page="286" end-page="288"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12753" work="W22084"/>
@@ -61,6 +61,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-090-015-8">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T10:45:20.009Z" type="text-version" status="0.0.5" xml:id="UT22084-090-015-9">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
