--- a/translations/kangyur/placeholders/090-014_toh570,991-the_incantation_of_hiranyavati.xml
+++ b/translations/kangyur/placeholders/090-014_toh570,991-the_incantation_of_hiranyavati.xml
@@ -13,7 +13,7 @@
                 <author role="translatorEng" xml:id="UT22084-090-014-2">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2024</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -35,7 +35,7 @@
                     <ref>Toh 991</ref>
                     <biblScope>vol.101, ff.144v-146v(pp.288-292)</biblScope>
                     <location work="UT4CZ5369" count-pages="5">
-                        <volume number="101" start-page="288" end-page="292"/>
+                        <volume number="102" start-page="288" end-page="292"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12754" work="W22084"/>
@@ -60,6 +60,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-01-12T12:48:18.119Z" type="text-version" status="0.0.4" xml:id="UT22084-090-014-8">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T10:49:10.803Z" type="text-version" status="0.0.5" xml:id="UT22084-090-014-9">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
