--- a/translations/kangyur/placeholders/090-016_toh572,993-the_queen_of_spells_anguli.xml
+++ b/translations/kangyur/placeholders/090-016_toh572,993-the_queen_of_spells_anguli.xml
@@ -15,7 +15,7 @@
                 <author role="translatorEng" xml:id="UT22084-090-016-2">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -37,7 +37,7 @@
                     <ref>Toh 993</ref>
                     <biblScope>vol.101, ff.147r-148r(pp.293-295)</biblScope>
                     <location work="UT4CZ5369" count-pages="3">
-                        <volume number="101" start-page="293" end-page="295"/>
+                        <volume number="102" start-page="293" end-page="295"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12756" work="W22084"/>
@@ -62,6 +62,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-090-016-8">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T10:56:30.318Z" type="text-version" status="0.0.5" xml:id="UT22084-090-016-9">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
