--- a/translations/kangyur/placeholders/090-017_toh573,996-the_incantation_of_the_mother_of_all_dharmas.xml
+++ b/translations/kangyur/placeholders/090-017_toh573,996-the_incantation_of_the_mother_of_all_dharmas.xml
@@ -14,7 +14,7 @@
                 <author role="translatorEng" xml:id="UT22084-090-017-2">Adam Krug</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2023</date>
+                <edition>v 0.0.5 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -36,7 +36,7 @@
                     <ref>Toh 996</ref>
                     <biblScope>vol.101, ff.149v-150r(pp.298-299)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="101" start-page="298" end-page="299"/>
+                        <volume number="102" start-page="298" end-page="299"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12759" work="W22084"/>
@@ -61,6 +61,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.4" xml:id="UT22084-090-017-8">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T13:11:09.863Z" type="text-version" status="0.0.5" xml:id="UT22084-090-017-9">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
