--- a/translations/kangyur/placeholders/091-057_toh660,997-the_incantation_the_mother_of_the_demons.xml
+++ b/translations/kangyur/placeholders/091-057_toh660,997-the_incantation_the_mother_of_the_demons.xml
@@ -15,7 +15,7 @@
                 <editor role="copyEditor" xml:id="UT22084-091-057-22">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -37,7 +37,7 @@
                     <ref>Toh 997</ref>
                     <biblScope>vol.101, ff.150r-153r(pp.299-305)</biblScope>
                     <location work="UT4CZ5369" count-pages="7">
-                        <volume number="101" start-page="299" end-page="305"/>
+                        <volume number="102" start-page="299" end-page="305"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12760" work="W22084"/>
@@ -92,6 +92,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-06-28T13:50:26.992Z" type="text-version" status="0.0.10" xml:id="UT22084-091-057-25">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T13:13:52.96Z" type="text-version" status="0.0.11" xml:id="UT22084-091-057-26">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
