--- a/translations/kangyur/placeholders/091-058_toh661,998-the_incantation_the_mother_of_the_demons.xml
+++ b/translations/kangyur/placeholders/091-058_toh661,998-the_incantation_the_mother_of_the_demons.xml
@@ -16,7 +16,7 @@
                 <editor role="copyEditor" xml:id="UT22084-091-058-22">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -38,7 +38,7 @@
                     <ref>Toh 998</ref>
                     <biblScope>vol.101, ff.153v-156r(pp.306-311)</biblScope>
                     <location work="UT4CZ5369" count-pages="6">
-                        <volume number="101" start-page="306" end-page="311"/>
+                        <volume number="102" start-page="306" end-page="311"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12761" work="W22084"/>
@@ -93,6 +93,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-06-28T13:53:22.449Z" type="text-version" status="0.0.10" xml:id="UT22084-091-058-25">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T13:24:29.528Z" type="text-version" status="0.0.11" xml:id="UT22084-091-058-26">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
