--- a/translations/kangyur/placeholders/087-002_toh497,999-incantation_of_the_eight_goddesses.xml
+++ b/translations/kangyur/placeholders/087-002_toh497,999-incantation_of_the_eight_goddesses.xml
@@ -17,7 +17,7 @@
                 <editor role="copyEditor" xml:id="UT22084-087-002-22">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.10 <date>2024</date>
+                <edition>v 0.0.11 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -39,7 +39,7 @@
                     <ref>Toh 999</ref>
                     <biblScope>vol.101, ff.156r-157v(pp.311-314)</biblScope>
                     <location work="UT4CZ5369" count-pages="4">
-                        <volume number="101" start-page="311" end-page="314"/>
+                        <volume number="102" start-page="311" end-page="314"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12762" work="W22084"/>
@@ -94,6 +94,9 @@
                 </change>
                 <change who="#line-tofte" when="2024-06-28T13:47:06.535Z" type="text-version" status="0.0.10" xml:id="UT22084-087-002-25">
                     <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T13:26:34.023Z" type="text-version" status="0.0.11" xml:id="UT22084-087-002-26">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
