--- a/translations/kangyur/placeholders/094-004_toh727,745,1000-the_hundred_and_eight_names_of_tara.xml
+++ b/translations/kangyur/placeholders/094-004_toh727,745,1000-the_hundred_and_eight_names_of_tara.xml
@@ -21,7 +21,7 @@
                 <editor role="projectEditor" xml:id="UT22084-094-004-5">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.3 <date>2023</date>
+                <edition>v 0.1.4 <date>2024</date>
                 </edition>
             </editionStmt>
 
@@ -53,7 +53,7 @@
                     <ref>Toh 1000</ref>
                     <biblScope>vol.101, ff.157v-160r(pp.314-319)</biblScope>
                     <location work="UT4CZ5369" count-pages="6">
-                        <volume number="101" start-page="314" end-page="319"/>
+                        <volume number="102" start-page="314" end-page="319"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12763" work="W22084"/>
@@ -81,6 +81,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.1.3" xml:id="UT22084-094-004-12">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T13:29:52.527Z" type="text-version" status="0.1.4" xml:id="UT22084-094-004-13">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
