--- a/translations/kangyur/placeholders/094-017_toh740,1005-the_sutra_of_mahalaksmi.xml
+++ b/translations/kangyur/placeholders/094-017_toh740,1005-the_sutra_of_mahalaksmi.xml
@@ -16,7 +16,7 @@
                 <consultant role="projectManager" xml:id="UT22084-094-017-11">Péter-Dániel Szántó</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.1 <date>2023</date>
+                <edition>v 0.0.2 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -37,7 +37,7 @@
                     <ref>Toh 1005</ref>
                     <biblScope>vol.101, ff.171r-172r(pp.341-343)</biblScope>
                     <location work="UT4CZ5369" count-pages="3">
-                        <volume number="101" start-page="341" end-page="343"/>
+                        <volume number="102" start-page="341" end-page="343"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12768" work="W22084"/>
@@ -75,6 +75,9 @@
                 </change>
                 <change who="#admin" when="2023-12-07T15:08:04.04Z" type="text-version" status="0.0.1" xml:id="UT22084-094-017-15">
                     <desc>script-increment-version-published</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T13:52:50.287Z" type="text-version" status="0.0.2" xml:id="UT22084-094-017-16">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
