--- a/translations/kangyur/placeholders/094-018_toh741,1006-the_twelve_names_of_sri_mahadevi.xml
+++ b/translations/kangyur/placeholders/094-018_toh741,1006-the_twelve_names_of_sri_mahadevi.xml
@@ -13,7 +13,7 @@
                 <author role="translatorEng" xml:id="UT22084-094-018-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -35,7 +35,7 @@
                     <ref>Toh 1006</ref>
                     <biblScope>vol.101, ff.172r-172v(pp.343-344)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="101" start-page="343" end-page="344"/>
+                        <volume number="102" start-page="343" end-page="344"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12769" work="W22084"/>
@@ -63,6 +63,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-094-018-11">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T13:55:25.063Z" type="text-version" status="0.0.6" xml:id="UT22084-094-018-12">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
