--- a/translations/kangyur/placeholders/091-059_toh662,1007-the_incantation_of_vasudhara.xml
+++ b/translations/kangyur/placeholders/091-059_toh662,1007-the_incantation_of_vasudhara.xml
@@ -15,7 +15,7 @@
                 <author role="translatorEng" xml:id="UT22084-091-059-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -37,7 +37,7 @@
                     <ref>Toh 1007</ref>
                     <biblScope>vol.101, ff.172v-176v(pp.344-352)</biblScope>
                     <location work="UT4CZ5369" count-pages="9">
-                        <volume number="101" start-page="344" end-page="352"/>
+                        <volume number="102" start-page="344" end-page="352"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12770" work="W22084"/>
@@ -65,6 +65,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-091-059-11">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T13:57:53.248Z" type="text-version" status="0.0.6" xml:id="UT22084-091-059-12">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
