--- a/translations/kangyur/placeholders/091-016_toh619,1008-the_spell_for_cleansing_the_eyes.xml
+++ b/translations/kangyur/placeholders/091-016_toh619,1008-the_spell_for_cleansing_the_eyes.xml
@@ -13,7 +13,7 @@
                 <author role="translatorEng" xml:id="UT22084-091-016-2">Ryan Damron</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -35,7 +35,7 @@
                     <ref>Toh 1008</ref>
                     <biblScope>vol.101, ff.176v-177v(pp.352-354)</biblScope>
                     <location work="UT4CZ5369" count-pages="3">
-                        <volume number="101" start-page="352" end-page="354"/>
+                        <volume number="102" start-page="352" end-page="354"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12771" work="W22084"/>
@@ -54,6 +54,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-091-016-6">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T14:00:19.724Z" type="text-version" status="0.0.4" xml:id="UT22084-091-016-7">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
