--- a/translations/kangyur/placeholders/091-027_toh630,1010-the_incantation_for_eliminating_all_hindrances.xml
+++ b/translations/kangyur/placeholders/091-027_toh630,1010-the_incantation_for_eliminating_all_hindrances.xml
@@ -14,6 +14,10 @@
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa bar du gcod pa thams cad sel ba'i gzungs sngags/</title>
                 <title type="otherTitle" xml:lang="Sa-Ltn">Āryasarvāntarāyika­saṃgrāsa­dhāraṇīmantra</title>
             </titleStmt>
+            <editionStmt>
+                <edition>v 0.0.2 <date>2024</date>
+                </edition>
+            </editionStmt>
             <publicationStmt>
                 <availability status=""/>
                 <idno xml:id="UT22084-091-027"/>
@@ -32,7 +36,7 @@
                     <ref>Toh 1010</ref>
                     <biblScope>vol.101, ff.179r-179r(pp.357-357)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="101" start-page="357" end-page="357"/>
+                        <volume number="102" start-page="357" end-page="357"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12773" work="W22084"/>
@@ -43,6 +47,9 @@
             
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.1" xml:id="UT22084-091-027-1">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T14:03:22.787Z" type="text-version" status="0.0.2" xml:id="UT22084-091-027-2">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
