--- a/translations/kangyur/placeholders/096-031_toh782,1013-the_incantation_for_the_purification_of_all_evil_destinies.xml
+++ b/translations/kangyur/placeholders/096-031_toh782,1013-the_incantation_for_the_purification_of_all_evil_destinies.xml
@@ -14,7 +14,7 @@
                 <author role="translatorEng" xml:id="UT22084-096-031-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.5 <date>2023</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -36,7 +36,7 @@
                     <ref>Toh 1013</ref>
                     <biblScope>vol.101, ff.179v179v(pp.358-358)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="101" start-page="358" end-page="358"/>
+                        <volume number="102" start-page="358" end-page="358"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12776" work="W22084"/>
@@ -64,6 +64,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-096-031-11">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T14:15:23.044Z" type="text-version" status="0.0.6" xml:id="UT22084-096-031-12">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
