--- a/translations/kangyur/placeholders/091-019_toh622,1014-the_incantation_for_assuaging_all_illnesses.xml
+++ b/translations/kangyur/placeholders/091-019_toh622,1014-the_incantation_for_assuaging_all_illnesses.xml
@@ -14,7 +14,7 @@
                 <author role="translatorEng" xml:id="UT22084-091-019-2">Ryan Damron</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -36,7 +36,7 @@
                     <ref>Toh 1014</ref>
                     <biblScope>vol.101, ff.180r-180v(pp.359-360)</biblScope>
                     <location work="UT4CZ5369" count-pages="2">
-                        <volume number="101" start-page="359" end-page="360"/>
+                        <volume number="102" start-page="359" end-page="360"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12777" work="W22084"/>
@@ -55,6 +55,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-091-019-6">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-02T14:17:11.266Z" type="text-version" status="0.0.4" xml:id="UT22084-091-019-7">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
