--- a/translations/kangyur/translations/001-001_toh1-1_chapter_on_going_forth.xml
+++ b/translations/kangyur/translations/001-001_toh1-1_chapter_on_going_forth.xml
@@ -31,7 +31,7 @@
                 <sponsor xml:id="UT22084-001-001-133560">Irene Tillman</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.37.12 <date>2024</date>
+                <edition>v 1.37.13 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -58,7 +58,7 @@
                     <author role="translatorTib" xml:id="UT22084-001-001-133614">Vidyākaraprabha</author>
                     <author role="translatorTib" xml:id="UT22084-001-001-133615">Dharmākara</author>
                     <author role="translatorTib" xml:id="UT22084-001-001-133616">Paltsek</author>
-                    <location work="UT4CZ5369" count-pages="259">
+                    <location work="UT4CZ5369" count-pages="260">
                         <volume number="1" start-page="2" end-page="261"/>
                     </location>
                     <idno parent-id="O1JC114941JC11497" work="http://read.84000.co/sections"/>
@@ -272,6 +272,9 @@
                 </change>
                 <change who="#andre" when="2024-06-28T16:55:35.315Z" type="text-version" status="1.37.12" xml:id="UT22084-001-001-133625">
                     <desc>Approved rendering "Jetavana, Anāthapiṇḍada’s Park" applied</desc>
+                </change>
+                <change who="#celso" when="2024-07-02T17:38:46.844Z" type="text-version" status="1.37.13" xml:id="UT22084-001-001-133626">
+                    <desc>corrected TEI/location[@count-pages]</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
