--- a/translations/kangyur/placeholders/091-020_toh623,1015-the_incantation_for_assuaging_all_illnesses.xml
+++ b/translations/kangyur/placeholders/091-020_toh623,1015-the_incantation_for_assuaging_all_illnesses.xml
@@ -17,7 +17,7 @@
                 <author role="translatorEng" xml:id="UT22084-091-020-2">Ryan Damron</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.3 <date>2023</date>
+                <edition>v 0.0.4 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -39,7 +39,7 @@
                     <ref>Toh 1015</ref>
                     <biblScope>vol.101, ff.180v-180v(pp.360-360)</biblScope>
                     <location work="UT4CZ5369" count-pages="1">
-                        <volume number="101" start-page="360" end-page="360"/>
+                        <volume number="102" start-page="360" end-page="360"/>
                     </location>
                     <idno parent-id="O1JC114941JC20568" work="http://read.84000.co/sections"/>
                     <idno source-id="O1JC114941JC12778" work="W22084"/>
@@ -58,6 +58,9 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.3" xml:id="UT22084-091-020-6">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#sameer" when="2024-07-03T06:01:15.851Z" type="text-version" status="0.0.4" xml:id="UT22084-091-020-7">
+                    <desc>Updated vol. 101 page numbers to match the ekangyur</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
