--- a/translations/kangyur/translations/072-022_toh322-verses_for_prasenajit.xml
+++ b/translations/kangyur/translations/072-022_toh322-verses_for_prasenajit.xml
@@ -19,7 +19,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-072-022-241">Andreas Doctor</editor>
             </titleStmt>
       <editionStmt>
-                <edition>v 0.0.19 <date>2024</date>
+                <edition>v 1.0.0 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -27,7 +27,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
           available to everyone. </publisher>
-        <availability status="2">
+        <availability status="1.a">
           <licence>
             <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
             <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND
@@ -39,7 +39,7 @@
         <idno xml:id="UT22084-072-022"/>
         <note>An early mistake in the assigning of UT numbers within the 84000 project means that
           these ids diverge slightly from the standard logic.</note>
-        <date>2024-02-09</date>
+        <date>2024-07-04</date>
       </publicationStmt>
       <sourceDesc>
         <bibl key="toh322" type="text">
@@ -140,6 +140,12 @@
                 </change>
                 <change who="#konchog" when="2024-07-02T01:21:02.465Z" type="text-version" status="0.0.19" xml:id="UT22084-072-022-247">
                     <desc>Second round of proofreading fixes.</desc>
+                </change>
+                <change who="#sameer" when="2024-07-04T07:49:57.97Z" type="translation-status" status="1.a" xml:id="UT22084-072-022-249">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#sameer" when="2024-07-04T07:49:57.97Z" type="text-version" status="1.0.0" xml:id="UT22084-072-022-250">
+                    <desc>First published version.</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
@@ -1201,32 +1207,6 @@
             </gloss>
                     </item>
           <item>
-                        <gloss type="term" xml:id="UT22084-072-022-202">
-              <tei:term xmlns:tei="http://www.tei-c.org/ns/1.0" type="translationMain">slave</tei:term>
-              <tei:term xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="Bo-Ltn" n="1">bran du </tei:term>
-              <tei:term xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="bo" n="1">བྲན་དུ།</tei:term>
-              <tei:term xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="zh">—</tei:term>
-              <tei:term xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="Sa-Ltn">dāsya</tei:term>
-              <!--<bad-or-no-attestation-code/>-->
-              <note type="definition">
-                                <p>Servitude, slavery, or service.</p>
-                            </note>
-            </gloss>
-                    </item>
-          <item>
-                        <gloss type="term" xml:id="UT22084-072-022-203">
-              <tei:term xmlns:tei="http://www.tei-c.org/ns/1.0" type="translationMain">servant</tei:term>
-              <tei:term xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="Bo-Ltn" n="1">mngag gzhug </tei:term>
-              <tei:term xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="bo" n="1">མངག་གཞུག</tei:term>
-              <tei:term xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="zh">—</tei:term>
-              <tei:term xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="Sa-Ltn">preṣya</tei:term>
-              <!--<bad-or-no-attestation-code/>-->
-              <note type="definition">
-                                <p>A servant, a menial, a slave, or a messenger. </p>
-                            </note>
-            </gloss>
-                    </item>
-          <item>
                         <gloss type="term" xml:id="UT22084-072-022-204">
               <tei:term xmlns:tei="http://www.tei-c.org/ns/1.0" type="translationMain">beggar</tei:term>
               <tei:term xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="Bo-Ltn" n="1">dbul bo</tei:term>
@@ -1344,8 +1324,8 @@
               <tei:term xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="zh">—</tei:term>
               <tei:term xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="Sa-Ltn">dhātudhara</tei:term>
               <!--<bad-or-no-attestation-code/>-->
-              <note type="definition">
-                                <p>A reliquary.</p>
+            <note type="definition">
+                                <p>A container of relics, such as a stūpa.</p>
                             </note>
             </gloss>
                     </item>
@@ -1472,6 +1452,17 @@
               <tei:term xmlns:tei="http://www.tei-c.org/ns/1.0" xml:lang="Sa-Ltn">jetavana</tei:term>
               <!--<bad-or-no-attestation-code/>-->
             </gloss>
+                    </item>
+          <item>
+                        <gloss type="place" xml:id="UT22084-072-022-248">
+            <term type="translationMain">Kośala</term>
+            <term xml:lang="Bo-Ltn" n="1">ko sha la</term>
+                            <term xml:lang="bo" n="1">ཀོ་ཤ་ལ།</term>
+            <term xml:lang="Sa-Ltn" type="attestedDictionary">kośala</term>
+            <note type="definition">
+              <p>An ancient kingdom, northwest of Magadha, abutting Kāśi, whose capital was Śrāvastī. During the Buddha’s time it was ruled by Prasenajit. It presently corresponds to an area within Uttar Pradesh.</p>
+            </note>
+          </gloss>
                     </item>
         </list>
       </div>
