--- a/translations/kangyur/placeholders/057-002_toh143,611,918-the_two_stanza_incantation.xml
+++ b/translations/kangyur/placeholders/057-002_toh143,611,918-the_two_stanza_incantation.xml
@@ -8,17 +8,18 @@
                 <title type="mainTitle" xml:lang="Sa-Ltn">Gāthādvayadhāraṇī</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">tshigs su bcad pa gnyis pa'i gzungs/</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">tshigs bcad gnyis pa'i gzungs/</title>
-                <author role="translatorMain" xml:id="UT22084-057-002-1"/>
+                <author role="translatorMain" xml:id="UT22084-057-002-1">Pema Yeshé Dé Translation Team</author>
                 <consultant role="projectManager" xml:id="UT22084-057-002-2">Giuliano Francisco Proença</consultant>
                 <author role="translatorEng" xml:id="UT22084-057-002-3">Giuliano Francisco Proença</author>
                 <editor role="proofreader" xml:id="UT22084-057-002-4">Daniela Espíndola</editor>
+                <editor role="projectEditor" xml:id="UT22084-057-002-21">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2024</date>
+                <edition>v 0.0.10 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-057-002"/>
                 <date/>
             </publicationStmt>
@@ -87,6 +88,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-06-20T10:00:14.307Z" type="text-version" status="0.0.8" xml:id="UT22084-057-002-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-06-20T10:02:59.479Z" type="text-version" status="0.0.9" xml:id="UT22084-057-002-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-04T08:53:11.408Z" type="translation-status" status="2.e" xml:id="UT22084-057-002-23">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-04T08:53:11.408Z" type="text-version" status="0.0.10" xml:id="UT22084-057-002-24">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
